fix main class name